# gpt2

./: README.md  inference.py  model.py  pyproject.toml  train.py
data/: process.py
